# taxtastic

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGES.rst  DEVELOPING.rst  Dockerfile  Home.rest  INSTALL  INSTALL.rst  MANIFEST.in  Makefile  README.md  README.rest  README.rst  SConscript  TESTING.rst  algotax.bib  algotax.tex  alignment.py  commands.html  distribute_setup.py  escape_granny_easy_game.html  genindex.html  index.html  installation.html  intro.md  objects.inv  place2csv.py  placelist.py  pyproject.toml  quickstart.html  refpkg.html  refpkg_align.py  refpkg_api.html  refpkg_searchaln.py  requirements-dev.txt  requirements.txt  (+13 more)
.doctrees/: commands.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree  refpkg.doctree  refpkg_api.doctree  taxonomy.doctree
_modules/: index.html
_sources/: commands.rst.txt  commands.txt  index.rst.txt  index.txt  installation.rst.txt  quickstart.rst.txt  quickstart.txt  refpkg.txt  taxonomy.rst.txt
_static/: documentation_options.js
code/: algotax.py  attempt.py  badgraph.py  demo.py  refpkg.py  reroot.py  test_algotax.py
dev/: README.txt  ghpages-init.sh  install_pplacer.sh  install_pysqlite.sh  pare_database.py  set_version.py
devtools/: ghpages-publish.sh  helptext.py  pare_database.py  set_version.py
docker/: .dockerignore  Dockerfile  README.md  build.sh  push.sh
docs/: Makefile  commands.rst  conf.py  index.rst  installation.rst  outline.org  overview.rst  quickstart.rst  refpkg.rst  refpkg_api.rst  requirements.txt  taxonomy.rst
(+220 files in other folders)
